--- a/app/src/main/res/drawable/danger_button.xml
+++ b/app/src/main/res/drawable/danger_button.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/holo_red_dark"/>
+            <solid android:color="#F44336"/>
 <!--            <stroke android:width="20px" android:color="@color/black"/>-->
             <corners android:radius="20dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/holo_red_dark"/>
+            <solid android:color="#F44336"/>
             <!--            <stroke android:width="20px" android:color="@color/black"/>-->
             <corners android:radius="20dp"/>
         </shape>
