--- a/app/src/main/res/layout/recycle_view_single_item.xml
+++ b/app/src/main/res/layout/recycle_view_single_item.xml
@@ -3,36 +3,59 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp"
-    android:layout_height="30dp">
+    android:layout_height="50dp"  android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    app:cardCornerRadius="8dp"  app:cardElevation="2dp" >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="12">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
+    android:paddingStart="16dp"
+    android:paddingEnd="8dp"
+    android:weightSum="12">
 
-        <TextView
-            android:id="@+id/itemName"
+    <TextView
+        android:id="@+id/itemName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="6"  android:textSize="16sp"  android:textColor="#333333" android:maxLines="1"
+        android:ellipsize="end"
+        android:textStyle="normal"
+        android:text="Long, descriptive idea or memory text"/>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="6"
+        android:orientation="horizontal"
+        android:gravity="end|center_vertical"
+        android:paddingStart="8dp">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnEdit"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:textSize="14sp"
-            android:textColor="@color/primary"
-            android:textStyle="bold"
-            android:text="Item"/>
+            android:layout_height="36dp"
+            android:layout_weight="2.5"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/edit_button"
+            android:text="Edit"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnRemove"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_height="36dp"
+            android:layout_weight="3.5"
             android:background="@drawable/danger_button"
             android:text="Delete"
             android:textColor="@color/white"
             android:textSize="12sp" />
 
-
     </LinearLayout>
+
+
+</LinearLayout>
 </androidx.cardview.widget.CardView>
