--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="pink_50">#FCE4EC</color>  <color name="pink_100">#F48FB1</color> <color name="pink_500">#E91E63</color>
+    <color name="text_dark">#333333</color>
 </resources>
